# condapackaging

./: .gitattributes  .gitignore  Makefile  README.md  environment.conda.gcc.yml  environment.conda.mingw.yml  environment.conda.msvc.yml  environment.conda.msvc17.yml  environment.conda.msvc19.yml  environment.conda.mvc.yml  environment.conda.yml  environment.gmsh.yml  environment.mingw.yml  environment.occ.yml  environment.yml  notes.md  pixi.toml
.github/actions/: boa-build.yml
.github/workflows/: check_repo_ci_jobs.py  ci-adapydeps.yml  ci-asrun.yml  ci-cadquery.yml  ci-calculix.yml  ci-code-aster-batch-dev.yml  ci-code-aster-batch.yml  ci-code-aster-batchv2.yml  ci-code-aster-ctest.yml  ci-code-aster-re-run.yml  ci-code-aster-src-linux.yml  ci-code-aster-src-win.yml  ci-code-aster-test.yml  ci-code-aster-win.yml  ci-code-aster.yml  ci-fail.yml  ci-flang.yml  ci-force-fail.yml  ci-gmsh.yml  (+38 more)
src/: .ci_nompi_debug_32.yaml  .ci_nompi_debug_64.yaml  .ci_nompi_release_32.yaml  .ci_nompi_release_64.yaml  common.yaml  common_rattler.yaml  debug.yaml  msbuild64.cmd  py312_debug.yaml
src/cpack/: pyproject.toml
src/cpack/cpack/: anaconda_upload.py  boa_helper.py  build_deps.py  check_repo_ci_jobs.py  cli_anaconda_upload.py  cli_cpack_actions.py  cli_quetz_uploader.py  condarc_builder.py  matrix_builder.py  packages.py  prefix_clean.py  prefix_jobs.py  query_channel.graphql  query_package_files.graphql  symbol_checker.py  variant_str_builder.py
src/cpack/cpack/ca_testing/: error_messages.py  run_ctest_md_gen.py  scan_failed.py
tests/: conftest.py  test_matrix_builder.py
(+582 files in other folders)
